--- a/nginx.conf
+++ b/nginx.conf
@@ -9,6 +9,16 @@ server {
         try_files $uri $uri/ /index.html;
     }
 
+    # Proxy pour NocoDB
+    location /nocodb/ {
+        proxy_pass http://nocodb-m0wo4o4kc4s0gko4k8cgogg8.62.72.18.21.sslip.io/;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+    }
+
     # Configuration des headers de sécurité
     add_header X-Frame-Options "SAMEORIGIN";
     add_header X-XSS-Protection "1; mode=block";
