feat: intégration de l'API NocoDB pour le formulaire de contact

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
 VITE_APP_TITLE=Portfolio Kevin
-VITE_NOCODB_TOKEN=1d-5viNwVUUHnP5JheXNfRzhaVRjVCHFL4gwTemi
+VITE_NOCODB_URL=https://nocodb.kevinalves.fr
+VITE_NOCODB_API_TOKEN=1d-5viNwVUUHnP5JheXNfRzhaVRjVCHFL4gwTemi
