--- a/nginx.conf
+++ b/nginx.conf
@@ -4,19 +4,38 @@ server {
     root /usr/share/nginx/html;
     index index.html;
 
+    # Ajout des types MIME pour TypeScript et SVG
+    types {
+        application/javascript js;
+        application/javascript mjs;
+        application/javascript ts;
+        text/html html;
+        text/css css;
+        image/svg+xml svg svgz;
+    }
+
     # Gestion du routage SPA
     location / {
         try_files $uri $uri/ /index.html;
+        add_header Cache-Control "no-cache";
     }
 
-    # Configuration des headers de sécurité
+    # Configuration des en-têtes de sécurité
     add_header X-Frame-Options "SAMEORIGIN";
     add_header X-XSS-Protection "1; mode=block";
     add_header X-Content-Type-Options "nosniff";
+
+    # Compression gzip
+    gzip on;
+    gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript image/svg+xml;
 
     # Configuration du cache pour les assets statiques
     location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg)$ {
         expires 30d;
         add_header Cache-Control "public, no-transform";
+        try_files $uri =404;
     }
+
+    # Gestion des erreurs
+    error_page 404 /index.html;
 } 
