--- a/nginx.conf
+++ b/nginx.conf
@@ -23,21 +23,24 @@ server {
         try_files $uri $uri/ /index.html;
         add_header Cache-Control "no-cache";
         
-        # Autoriser CORS pour tous les domaines en développement
+        # Autoriser CORS pour l'API NocoDB
         add_header 'Access-Control-Allow-Origin' '*' always;
         add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE' always;
-        add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization,xc-auth,Accept' always;
+        add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization,xc-auth,Accept,Bearer' always;
         add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range' always;
         
         if ($request_method = 'OPTIONS') {
             add_header 'Access-Control-Allow-Origin' '*' always;
             add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE' always;
-            add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization,xc-auth,Accept' always;
+            add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization,xc-auth,Accept,Bearer' always;
             add_header 'Access-Control-Max-Age' 1728000;
             add_header 'Content-Type' 'text/plain; charset=utf-8';
             add_header 'Content-Length' 0;
             return 204;
         }
+
+        proxy_set_header Authorization $http_authorization;
+        proxy_pass_header Authorization;
     }
 
     # Configuration du cache pour les assets statiques
